# transformerlens_skill

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
src/transformerlens_skill/: __init__.py  activation_patching.py  attribution_patching.py  basics.py  causal_tracing.py  logit_lens.py  model_steering.py  models.py  nnsight_basics.py  utils.py
tests/: test_project_structure.py
