[project]
name = "transformerlens-skill"
version = "0.1.0"
description = "Reusable TransformerLens mechanistic interpretability skill modules."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Durarara" }]
license = { text = "MIT" }
dependencies = [
    "transformer-lens",
    "torch",
    "einops",
    "fancy-einsum",
    "jaxtyping",
    "typeguard",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "plotly",
    "tqdm",
    "huggingface-hub",
    "transformers",
    "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/<your-username>/transformerlens_skill"
Repository = "https://github.com/<your-username>/transformerlens_skill"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transformerlens_skill"]
